--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!-- reference: thank W3Schools for helping me learn and sharing template sources :) -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Ruby Chin CV Page</title>
+        <title>Ruby Chin Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,11 +23,16 @@
             .w3-third img {
                 margin-bottom: -6px;
                 opacity: 0.8;
-                cursor: pointer
+                cursor: pointer;
+            }
+
+            .w3-third{
+                column-gap: 5px;
             }
 
             .w3-third img:hover {
-                opacity: 1
+                opacity: 1;
+                
             }
 
             .swiper-button-next,
@@ -47,14 +54,14 @@
         <h3 class="w3-padding-64 w3-center"><b>RUBY CHIN</b></h3>
         <a href="javascript:void(0)" onclick="w3_close()"
             class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
-        <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
+        <a href="#my_story" onclick="w3_close()" class="w3-bar-item w3-button">MY STORY</a>
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
         <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
     </nav>
 
     <!-- Top menu on small screens -->
     <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-        <span class="w3-left w3-padding">RUBY CHIN</span>
+        <span class="w3-left w3-padding">RUBY CHIN PAGE</span>
         <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
     </header>
 
@@ -72,31 +79,29 @@
 
 <!-- Slider main container -->
        <div class="swiper mySwiper">
-           <div class="swiper-wrapper">
-            
+        <div class="swiper-wrapper">    
         <div class="swiper-slide slide_1">
         <div class="w3-row">
             <div class="w3-third">
-                <img src="https://www.w3schools.com/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="image/ibm/bank_training1.png" style="width:100%" onclick="onClick(this)"
                     alt="A boy surrounded by beautiful nature">
-                <img src="https://www.w3schools.com/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)"
-                    alt="What a beautiful scenery this sunset">
-                <img src="https://www.w3schools.com/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+                <img src="image/ibm/development_cycle.png" style="width:100%" onclick="onClick(this)"
+                    alt="development cycle">
+                <img src="image/ibm/green_eloan_sharing.png" style="width:100%" onclick="onClick(this)" alt="sharing">
             </div>
 
             <div class="w3-third">
-                <img src="https://www.w3schools.com/w3images/boy.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="image/ibm/induction_training.png" style="width:100%" onclick="onClick(this)"
                     alt="Quiet day at the beach. Cold, but beautiful">
-                <img src="https://www.w3schools.com/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)"
-                    alt="Waiting for the bus in the desert">
-                <img src="https://www.w3schools.com/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="image/ibm/volunteer.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+                <img src="image/ibm/ibm_university.png" style="width:100%" onclick="onClick(this)"
                     alt="Nature again.. At its finest!">
             </div>
 
             <div class="w3-third">
-                <img src="https://www.w3schools.com/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-                <img src="https://www.w3schools.com/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-                <img src="https://www.w3schools.com/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+                <img src="image/ibm/setup.png" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+                <img src="image/ibm/bank_training2.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+                <img src="image/ibm/ibm_values.png" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
             </div>
         </div>
         </div>
@@ -127,10 +132,11 @@
             </div>
         </div>
         </div>
-        </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
+    </div>
 
         <!-- Modal for full size images on click-->
         <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
@@ -318,6 +324,10 @@
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
             },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        }
         });
 
 
