--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             </div>
         </div>
         </div>
+        </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
