Download CV function

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
     <!-- Info message -->
     <div class="info">
         <span class="closebtn">&times;</span>  
-        Hello there! This is Ruby's page. I use W3Schools' source codes to build this website with GitHub.
+        Hello there! This is Ruby's page. I use W3Schools' template as a base to build this website with GitHub. This is quite short because I hope to highlight the main points that are not on my CV.
     </div>
     <div class="info info1">
         <span class="closebtn">&times;</span>  
-        Images convey more than words. I believe integrating the information and images gives you a clearer picture about myself.
+        Images convey more than words. I believe integrating the information and images gives you a picture about myself.
     </div>
     <div class="info info2">
         <span class="closebtn">&times;</span>  
@@ -180,26 +180,16 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
             <p> 
-            My name is Ruby Chin. I 
+            My name is Ruby Chin. I enjoy meeting new people and learnig new things. 
             </p>
             <p>Email: ruby10262239@gmail.com</p>
             <p>Tel: +852 6676-2620</p>
             <hr class="w3-opacity">
-            <h4 class="w3-padding-16">Technical Skills</h4>
-            <p class="w3-wide">Photography</p>
-            <div class="w3-white">
-                <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
-            </div>
-            <p class="w3-wide">Web Design</p>
-            <div class="w3-white">
-                <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
-            </div>
-            <p class="w3-wide">Photoshop</p>
-            <div class="w3-white">
-                <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
-            </div>
+            
+            <a href="/images/myw3schoolsimage.jpg" download="Ruby's Resume">
             <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download
                     Resume</button></p>
+            </a>
             <hr class="w3-opacity">
         </div>
     </div>
