--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p>Tel: +852 6676-2620</p>
             <hr class="w3-opacity">
             
-            <a href="/images/myw3schoolsimage.jpg" download="Ruby's Resume">
+            <a href="CHIN Tai Wei Ruby_CV.pdf" download="Ruby's Resume">
             <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download
                     Resume</button></p>
             </a>
