--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
             <p> 
-            My name is Ruby Chin. I enjoy meeting new people and learnig new things. 
+            My name is Ruby Chin. I enjoy meeting new people and learnig new things. Feel free to see my resume and contact me via email or phone for a coffee chat.
             </p>
             <p>Email: ruby10262239@gmail.com</p>
             <p>Tel: +852 6676-2620</p>
@@ -204,25 +204,25 @@
         <div class="w3-row">
             <div class="w3-third">
                 <img src="image/college/japanese_culture.png" style="width:100%" onclick="onClick(this)"
-                    alt="A boy surrounded by beautiful nature">
+                    alt="Starting from the first year of college, I have explored a plenty of things. I love the Japanese culture and language. This goes hand in hand with my passion in exploring different cultures, people and ways of communication.">
                 <img src="image/college/scholarship.png" style="width:100%" onclick="onClick(this)"
-                    alt="What a beautiful scenery this sunset">
-                <img src="image/college/hkepc.png" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+                    alt="In my second year of college, I transferred from the US to the City University of Hong Kong and received a three-year full-tuition scholarship.">
+                <img src="image/college/hkepc.png" style="width:100%" onclick="onClick(this)" alt="I also joined the Hong Kong Economic Policy Challenge where we dug deeper into HK economic housing price analysis and proposed an economic plan to mitigate the housing issue. We presented in front of HKUST professors, EY and Bloomberg industry experts.">
             </div>
 
             <div class="w3-third">
                 <img src="image/college/cultural_performance.png" style="width:100%" onclick="onClick(this)"
-                    alt="Quiet day at the beach. Cold, but beautiful">
+                    alt="I spent most of my freshman year playing the flute, solo and in the orchestra, and trying new things.">
                 <img src="image/college/acca_competition.png" style="width:100%" onclick="onClick(this)"
-                    alt="Waiting for the bus in the desert">
+                    alt="I joined the Business Proposal and Competition Club and take lead in many case competitions. One is the ACCA/CFA Business Competition where we came out with a profitable proposal that solved the HK housing price issue.">
                 <img src="image/college/ey_internship.png" style="width:100%" onclick="onClick(this)"
-                    alt="Nature again.. At its finest!">
+                    alt="I was fortunate to join EY as a Forensic Data Analytics intern in the summer and explore how we used data analytics and big data in the industry.">
             </div>
 
             <div class="w3-third">
-                <img src="image/college/ntu_leaders_dialogue.png" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-                <img src="image/college/esg_research.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-                <img src="image/college/microsoft_apprenticeship.png" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+                <img src="image/college/ntu_leaders_dialogue.png" style="width:100%" onclick="onClick(this)" alt="In the end of my freshman, I joined the National Taiwan University Global Initiatives Symposium Action Project Competition where our team came out with sustainable business idea and pitched the proposal to the companies and audiences. This was when I found my passion in the problem solving process.">
+                <img src="image/college/esg_research.png" style="width:100%" onclick="onClick(this)" alt="I also joined the HKICS Corporate Governance Paper Presentation Competition to learn and conduct in-depth research on ESG and present our research to the well-known corporate governance scholars and industry experts in Hong Kong.">
+                <img src="image/college/microsoft_apprenticeship.png" style="width:100%" onclick="onClick(this)" alt="In my last year of college, I focused on learning more about the technology, completed my Computing minor and searched for an IT consultancy job.">
             </div>
         </div>
         </div>
@@ -231,24 +231,24 @@
             <div class="w3-row">
                 <div class="w3-third">
                     <img src="image/ibm/bank_training1.png" style="width:100%" onclick="onClick(this)"
-                        alt="A boy surrounded by beautiful nature">
+                        alt="A Bank's Training Session">
                     <img src="image/ibm/volunteer.png" style="width:100%" onclick="onClick(this)"
-                        alt="development cycle">
-                    <img src="image/ibm/ibm_university.png" style="width:100%" onclick="onClick(this)" alt="sharing">
+                        alt="1-Day Volunteer Trip">
+                    <img src="image/ibm/ibm_university.png" style="width:100%" onclick="onClick(this)" alt="IBM Consulting University Training">
                 </div>
     
                 <div class="w3-third">
                     <img src="image/ibm/induction_training.png" style="width:100%" onclick="onClick(this)"
-                        alt="Quiet day at the beach. Cold, but beautiful">
-                    <img src="image/ibm/development_cycle.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+                        alt="IBM Induction Training">
+                    <img src="image/ibm/development_cycle.png" style="width:100%" onclick="onClick(this)" alt="My daily routine through the software developmenet process.">
                     <img src="image/ibm/green_eloan_sharing.png" style="width:100%" onclick="onClick(this)"
-                        alt="Nature again.. At its finest!">
+                        alt="APAC Green eLoan Sharing Presentation">
                 </div>
     
                 <div class="w3-third">
-                    <img src="image/ibm/setup.png" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-                    <img src="image/ibm/bank_training2.png" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-                    <img src="image/ibm/ibm_values.png" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+                    <img src="image/ibm/setup.png" style="width:100%" onclick="onClick(this)" alt="Created Setup and Development Manuals">
+                    <img src="image/ibm/bank_training2.png" style="width:100%" onclick="onClick(this)" alt="BA Training Sessions: Teaching Swimlane Diagram">
+                    <img src="image/ibm/ibm_values.png" style="width:100%" onclick="onClick(this)" alt="Last Day of IBM">
                 </div>
             </div>
             </div>
@@ -311,24 +311,27 @@
         <footer class="w3-container w3-padding-32 w3-grey">
             <div class="w3-row-padding">
                 <div class="w3-third">
-                    <h3>INFO</h3>
-                    <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                        ultricies congue gravida diam non fringilla.</p>
+                    <h3>CAREER GOAL</h3>
+                    <p>
+                        I am ambitioned to develop a career to deliver great applications.
+                    </p>
                 </div>
 
                 <div class="w3-third">
                     <h3>PROJECTS</h3>
                     <ul class="w3-ul">
+                        <a href="https://drive.google.com/file/d/1OvH0bNr_uMGX709GDJr8JvddJl7oNxA5/view?usp=sharing">
                         <li class="w3-padding-16 w3-hover-black">
                             <img src="https://www.w3schools.com/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Lorem</span><br>
-                            <span>Sed mattis nunc</span>
+                            <span class="w3-large">Software Design</span><br>
                         </li>
+                        </a>
+                        <a href="https://drive.google.com/file/d/1svPGS3gzh_BK7_6zJdpXdo8E16E12s9B/view?usp=sharing">
                         <li class="w3-padding-16 w3-hover-black">
                             <img src="https://www.w3schools.com/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Ipsum</span><br>
-                            <span>Praes tinci sed</span>
+                            <span class="w3-large">Enterprise Data Mining</span><br>
                         </li>
+                        </a>
                     </ul>
                 </div>
 
