--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <div class="info info2">
         <span class="closebtn">&times;</span>  
-        Everything is on one page. The first section is "About Me". The second section is "My Story" where you can swipe between my my college life and my work experience. The last section is the "Comments" section.
+        Everything is on one page. The first section is "About Me". The second section is "My Story" where you can swipe between my my college life and my work experience. The last section is the "Comments" section where I hope to receive your feedback.
     </div>
     <div class="info info3">
         <span class="closebtn">&times;</span>  
@@ -180,7 +180,7 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
             <p> 
-            My name is Ruby Chin. I enjoy meeting new people and learnig new things. Feel free to see my resume and contact me via email or phone for a coffee chat.
+            My name is Ruby Chin. I enjoy meeting new people and learnig new things. I come from a multicultural background and have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and contact me via email or phone for a coffee chat.
             </p>
             <p>Email: ruby10262239@gmail.com</p>
             <p>Tel: +852 6676-2620</p>
@@ -214,7 +214,7 @@
                 <img src="image/college/cultural_performance.png" style="width:100%" onclick="onClick(this)"
                     alt="I spent most of my freshman year playing the flute, solo and in the orchestra, and trying new things.">
                 <img src="image/college/acca_competition.png" style="width:100%" onclick="onClick(this)"
-                    alt="I joined the Business Proposal and Competition Club and take lead in many case competitions. One is the ACCA/CFA Business Competition where we came out with a profitable proposal that solved the HK housing price issue.">
+                    alt="I joined the Business Proposal and Competition Club and took lead in many case competitions. One is the ACCA/CFA Business Competition where we came out with a profitable proposal that solved the HK housing price issue.">
                 <img src="image/college/ey_internship.png" style="width:100%" onclick="onClick(this)"
                     alt="I was fortunate to join EY as a Forensic Data Analytics intern in the summer and explore how we used data analytics and big data in the industry.">
             </div>
@@ -313,7 +313,7 @@
                 <div class="w3-third">
                     <h3>CAREER GOAL</h3>
                     <p>
-                        I am ambitioned to develop a career to deliver great applications.
+                        I am ambitioned to develop a career to deliver great applications that make people's lives better.
                     </p>
                 </div>
 
