--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
         <a href="#my_story" onclick="w3_close()" class="w3-bar-item w3-button">MY STORY</a>
-        <a href="#feedback" onclick="w3_close()" class="w3-bar-item w3-button">Feedback</a>
+        <a href="#feedback" onclick="w3_close()" class="w3-bar-item w3-button">FEEDBACK</a>
     </nav>
 
     <!-- Top menu on small screens -->
@@ -180,7 +180,7 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
             <p> 
-            My name is Ruby Chin. I enjoy meeting new people and learnig new things. I come from a multicultural background and have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and contact me via email or phone for a coffee chat.
+            My name is Ruby Chin. I enjoy meeting new people and learnig new things. I come from a multicultural background and have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and contact me via email or phone.
             </p>
             <p>Email: ruby10262239@gmail.com</p>
             <p>Tel: +852 6676-2620</p>
