--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
             <div class="w3-content" style="max-width:600px">
                 <h4 class="w3-center"><b>Tell Me What You Think</b></h4>
                 <p>Thank you for reading my CV and page! Please let me know how I can improve my application:</p>
-                <form action="connect.php" target="_blank">
+                <form action="https://formspree.io/f/xzbllylk" target="_blank"> <!-- used to be action action="connect.php" but change to formspree to make the process easier-->
                     <div class="w3-section">
                         <label>Name</label>
                         <input class="w3-input w3-border" type="text" name="name" required>
                     </div>
                     <div class="w3-section">
                         <label>Email</label>
-                        <input class="w3-input w3-border" type="text" name="email" required>
+                        <input class="w3-input w3-border" type="email" name="email" required>
                     </div>
                     <div class="w3-section">
                         <label>Comments</label>
