--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="w3-content" style="max-width:600px">
                 <h4 class="w3-center"><b>Tell Me What You Think</b></h4>
                 <p>Thank you for reading my CV and page! Please let me know how I can improve my application:</p>
-                <form action="https://formspree.io/f/xzbllylk" target="_blank"> <!-- used to be action action="connect.php" but change to formspree to make the process easier-->
+                <form action="https://formspree.io/f/xzbllylk" target="_blank" method="POST"> <!-- used to be action action="connect.php" but change to formspree to make the process easier-->
                     <div class="w3-section">
                         <label>Name</label>
                         <input class="w3-input w3-border" type="text" name="name" required>
