--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
             <p>Tel: +852 6676-2620</p>
 
             <div>
-            <a href="www.linkedin.com/in/ruby-chin/">
+            <a href="https://www.linkedin.com/in/ruby-chin/">
             <img src="image/linkedin.png" alt="LinkedIn" width="50" height="50" style="margin-right: 10px;"> 
             </a>
-            <a href=mailto:ruby10262239@gmail.com?subject="Let's Connect">
+            <a href="mailto:ruby10262239@gmail.com?subject= Let's Connect">
             <img src="image/gmail.png" alt="gmail" width="50" height="50"> 
             </a>
             </div>
@@ -348,13 +348,14 @@
                         <a href="https://drive.google.com/file/d/1OvH0bNr_uMGX709GDJr8JvddJl7oNxA5/view?usp=sharing">
                         <li class="w3-padding-16 w3-hover-black">
                             <img src="image/oops.png" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Software Design</span><br>
+                            <span>Software Design: Clinic Management System</span><br>
                         </li>
                         </a>
                         <a href="https://drive.google.com/file/d/1svPGS3gzh_BK7_6zJdpXdo8E16E12s9B/view?usp=sharing">
                         <li class="w3-padding-16 w3-hover-black">
                             <img src="image/analytics.png" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Data Mining</span><br>
+                            <span>Data Mining: Virtual Banks’ Marketing
+                                Campaign and Personal Loan Management</span><br>
                         </li>
                         </a>
                     </ul>
