--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- reference: thanks W3Schools for sharing this template sources :) -->
+<!-- reference: thanks W3Schools for sharing the template sources :) -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -76,54 +76,54 @@
             }
 
             .star-rating {
-  display: flex;
-  align-items: center;
-  width: 160px;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  margin: 40px auto;
-  position: relative;
-}
-/* hide the inputs */
-.star-rating input {
-  display: none;
-}
-/* set properties of all labels */
-.star-rating > label {
-  width: 30px;
-  height: 30px;
-  font-family: Arial;
-  font-size: 30px;
-  transition: 0.2s ease;
-  color: orange;
-}
-/* give label a hover state */
-.star-rating label:hover {
-  color: #ff69b4;
-  transition: 0.2s ease;
-}
-.star-rating label:active::before {
-  transform:scale(1.1);
-}
+                display: flex;
+                align-items: center;
+                width: 160px;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                margin: 40px auto;
+                position: relative;
+            }
+            /* hide the inputs */
+            .star-rating input {
+                display: none;
+            }
+            /* set properties of all labels */
+            .star-rating > label {
+                width: 30px;
+                height: 30px;
+                font-family: Arial;
+                font-size: 30px;
+                transition: 0.2s ease;
+                color: orange;
+            }
+            /* give label a hover state */
+            .star-rating label:hover {
+                color: #ff69b4;
+                transition: 0.2s ease;
+            }
+            .star-rating label:active::before {
+                transform:scale(1.1);
+            }
 
-/* set shape of unselected label */
-.star-rating label::before {
-  content: '\2606';
-  position: absolute;
-  top: 0px;
-  line-height: 26px;
-}
-/* set full star shape for checked label and those that come after it */
-.star-rating input:checked ~ label:before {
-  content:'\2605';
-}
+            /* set shape of unselected label */
+            .star-rating label::before {
+                content: '\2606';
+                position: absolute;
+                top: 0px;
+                line-height: 26px;
+            }
+            /* set full star shape for checked label and those that come after it */
+            .star-rating input:checked ~ label:before {
+                content:'\2605';
+            }
 
-@-moz-document url-prefix() {
-  .star-rating input:checked ~ label:before {
-  font-size: 36px;
-  line-height: 21px;
-  }
-}  
+            @-moz-document url-prefix() {
+                .star-rating input:checked ~ label:before {
+                font-size: 36px;
+                line-height: 21px;
+                }
+            }  
         </style>
     </head>
 
@@ -159,7 +159,7 @@
     <!-- Info message -->
     <div class="info">
         <span class="closebtn">&times;</span>  
-        Hello there! This is Ruby's page. Thanks W3Schools' template for saving me a lot of time to build this website.
+        Hello there! This is Ruby's page. Thanks W3Schools' codes for saving me a lot of time to build this website.
     </div>
     <div class="info info1">
         <span class="closebtn">&times;</span>  
@@ -181,14 +181,14 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
             <p> 
-            My name is Ruby Chin, a present researcher at the Department of Management Sciences and a former consultant at IBM Taiwan. I come from a multicultural background and 
+            My name is Ruby Chin, a present researcher at the Department of Management Sciences and a former consultant at IBM Taiwan. I come from a multicultural background (Taiwan, Hong Kong and U.S.) and 
             have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and connect with me.
             </p>
             <p>Tel: +852 6676-2620</p>
 
             <div>
             <a href="https://www.linkedin.com/in/ruby-chin/">
-            <img src="image/linkedin.png" alt="LinkedIn" width="50" height="50" class="w3-margin-right"> 
+            <img src="image/linkedin.png" alt="LinkedIn" target=”_blank” width="50" height="50" class="w3-margin-right"> 
             </a>
             <a href="mailto:ruby10262239@gmail.com?subject= Let's Connect">
             <img src="image/gmail.png" alt="gmail" width="50" height="50"> 
