--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
         <h4><b>About Me</b></h4>
         <img src="image/Intro Pic.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
         <div class="w3-content w3-justify" style="max-width:600px">
-            <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Software Design/Testing</em></h4>
+            <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Design Thinking/Testing</em></h4>
             <p> 
-            My name is Ruby Chin, a present researcher at the Department of Management Sciences and a former consultant at IBM Taiwan. I come from a multicultural background (Taiwan, Hong Kong and U.S.) and 
+            My name is Ruby Chin, an analyst professional who has intensive skills in the IT and Finance fields. I come from a multicultural background (Taiwan, Hong Kong and U.S.) and 
             have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and connect with me.
             </p>
             <p>Tel: +852 6676-2620</p>
 
             <div>
-            <a href="https://www.linkedin.com/in/ruby-chin/">
-            <img src="image/linkedin.png" alt="LinkedIn" target=”_blank” width="50" height="50" class="w3-margin-right"> 
+            <a href="https://www.linkedin.com/in/ruby-chin/" target=”_blank”>
+            <img src="image/linkedin.png" alt="LinkedIn" width="50" height="50" class="w3-margin-right"> 
             </a>
             <a href="mailto:ruby10262239@gmail.com?subject= Let's Connect">
             <img src="image/gmail.png" alt="gmail" width="50" height="50"> 
@@ -242,7 +242,7 @@
                 <img src="image/college/esg_research.png" style="width:100%" onclick="onClick(this)" 
                     alt="I also joined the HKICS Corporate Governance Paper Presentation Competition to learn and conduct in-depth research on ESG and present our research to the well-known corporate governance scholars and industry experts in Hong Kong.">
                 <img src="image/college/microsoft_apprenticeship.png" style="width:100%" onclick="onClick(this)" 
-                    alt="In my last year of college, I focused on my study on Computer Science and searched for an IT consultancy job.">
+                    alt="In my last year of college, I focused on my study on Computer Science and the IT applications by engaging in hackathons and IT projects.">
             </div>
         </div>
         </div>
@@ -251,7 +251,7 @@
             <div class="w3-row">
                 <div class="w3-third">
                     <img src="image/ibm/induction_training.png" style="width:100%" onclick="onClick(this)"
-                        alt="Graduated from CityU, I landed my first job at Taiwan IBM. I completed the induction training and got the full grasp of IBM way and new technologies and methods.">
+                        alt="Graduated from CityU, I landed my first job at Taiwan IBM. I completed the induction training and got the full grasp of Design Thinking, Agile, Cloud, AI and other new technologies and methods.">
                     <img src="image/ibm/volunteer.png" style="width:100%" onclick="onClick(this)"
                         alt="I joined the IBM trip to Sanxia and volunteered for a riverside cleanup.">
                     <img src="image/ibm/ibm_university.png" style="width:100%" onclick="onClick(this)" 
@@ -264,7 +264,7 @@
                     <img src="image/ibm/development_cycle.png" style="width:100%" onclick="onClick(this)" 
                         alt="After 4 months, I expressed my interest in system analysis and software design and preferred a more client-facing role so I rotated to a corporate lending system PCR project as a system analyst. The project allowed me to take ownership of the end-to-end requirement-to-deployment of several functions and think critically about optimizing the system in consideration of the whole system architecture.">
                     <img src="image/ibm/green_eloan_sharing.png" style="width:100%" onclick="onClick(this)"
-                        alt="Meanwhile, I supported my solution leader and eLoan team to formulate new digital lending ESG application ideas, gap analysis for a bank and spoke in the Green eLoan Sharing presentation and Q&A.">
+                        alt="Meanwhile, I supported my solution leader and eLoan team to formulate new digital lending ESG application ideas, gap analysis for a bank and spoke in the APAC Green eLoan Sharing presentation and Q&A.">
                 </div>
     
                 <div class="w3-third">
@@ -273,7 +273,7 @@
                     <img src="image/ibm/bank_training2.png" style="width:100%" onclick="onClick(this)" 
                         alt="Along with the project, I spent three Tuesdays travelling to Taichung with the IBM engagement team to teach our potential clients to draw the swimlane diagrams in three Business Analyst workshops.">
                     <img src="image/ibm/ibm_values.png" style="width:100%" onclick="onClick(this)" 
-                        alt="After a year and two months, I decide to make my career transition from Taiwan to Hong Kong for personal growth and my family. I am grateful to my leaders, colleagues and clients who help me to work and grow in my journey.">
+                        alt="After a year and two months, I decide to make my career transition from Taiwan to Hong Kong for personal growth and my family. I am grateful to my leaders, colleagues and clients who have supported me to work and grow in my journey.">
                 </div>
             </div>
             </div>
@@ -338,7 +338,7 @@
                 <div class="w3-third">
                     <h3>CAREER GOAL</h3>
                     <p>
-                        I am ambitioned to develop a career to deliver great applications that make people's lives better.
+                        I am ambitioned to develop a career to deliver user-centric and sustainable applications that make people's lives better.
                     </p>
                 </div>
 
