--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div style="text-align:center"> 
             
             <p>
-                <a href="CHIN Tai Wei Ruby_CV.pdf" download="Ruby's Resume">
+                <a href="CHIN Tai Wei Ruby_CV.pdf" download="CHIN Tai Wei Ruby_CV">
                 <button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom w3-margin-right">Download
                     Resume</button>  
                 </a>
