--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="w3-content w3-justify" style="max-width:600px">
             <h4 style= "font-family: Lucida Handwriting"> <em>Business/System Analysis/Data/Design Thinking</em></h4>
             <p> 
-            My name is Ruby Chin, an analyst professional who has intensive skills in the IT and Finance fields. I come from a multicultural background (Taiwan, Hong Kong and U.S.) and 
+            My name is Ruby Chin, an analyst professional who has intensive skills in the IT and Finance fields. I come from a multicultural background (Taiwan, Hong Kong, U.S. and Japan) and 
             have been exposed myself to different persepectives and subjects. I am open to new ideas and technologies. Feel free to view my resume and connect with me.
             </p>
             <p>Tel: +852 6676-2620</p>
